Cleanup and add jacoco plugin (#150)